--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
              </div>
              <div class="right">
                  <p>Address: Charikhola,Nilphamari</p>
-                 <p>Sex: female </p>
+                 <p>Sex:male </p>
                  <p>Date of birth: 10/1/2003</p>
                  <p>Nationality: Bangladeshi</p>
              </div>
